Fixed vertical alignment

--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,11 @@ section {
   width: 40%;
   right: -44%;
   top: 14.5%;
+  color: white;
+
+  display: -webkit-flex;
+  display: flex;
+  align-items: center;
 }
 
 .lImg{
@@ -147,11 +152,16 @@ section {
   width: 40%;
   right: 46%;
   top: 14.5%;
+  color: white;
+
+  display: -webkit-flex;
+  display: flex;
+  align-items: center;
 }
 
 .overlayText {
   z-index: 3;
-  position: absolute;
+  position: relative;
   font-size: 3vw;
   word-wrap: normal;
 }
@@ -175,5 +185,8 @@ section {
 @media screen and (min-width: 1600px) {
   .overlayText {
      font-size: 48px;
+  }
+  .footer {
+    bottom: -200vw;
   }
 }
